# N1_stand

./: 0event_nominal.webm  3events_robustness test .webm  README.md  play.py  pyproject.toml  train.py
robots/: Huan_N1_13Dof.usd
robots/N1/urdf/: N1_main_body_raw.urdf  N1_raw.urdf
robots/N1/urdf/N1_main_body_raw/: N1_main_body_raw.usd
robots/N1/urdf/N1_main_body_raw/configuration/: N1_main_body_raw_physics.usd  N1_main_body_raw_sensor.usd
robots/N1/urdf/N1_raw/: N1_raw.usd
robots/N1/urdf/N1_raw/configuration/: N1_raw_physics.usd  N1_raw_robot.usd  N1_raw_sensor.usd
robots/N1/urdf/N1_raw/configuration/configuration/: N1_raw_sensor_physics.usd
source/proj1/: __init__.py  plot_learning_curve.py  robot_cfg.py  stand_env_cfg.py
source/proj1/agents/: rsl_rl_ppo_cfg.py
source/proj1/mdp/: __init__.py  rewards_terminations.py
