[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proj1"
version = "0.1.0"
description = "IsaacLab tasks for project 1"
requires-python = ">=3.8"

dependencies = [
    "gymnasium",
]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
